--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "marked": "^0.8.2",
+    "md5": "^2.2.1",
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.2",
+    "sanitize-html": "^1.22.1",
     "validator": "^12.2.0"
   }
 }
