--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.0.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.0",
