--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "watch": "nodemon db --ignore frontend-js --ignore public/ & webpack --watch",
+    "dev": "nodemon db --ignore frontend-js --ignore public/ & webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,11 +27,11 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "marked": "^0.8.2",
     "md5": "^2.2.1",
     "mongodb": "^3.5.7",
-    "nodemon": "^2.0.4",
     "sanitize-html": "^1.24.0",
     "socket.io": "^2.3.0",
     "validator": "^12.2.0"
@@ -40,6 +40,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
+    "nodemon": "^2.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
